--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "updated october 2021",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o src/css/ --recursive"
   },
   "author": "Chynna Lew",
   "license": "MIT",
