--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "updated october 2021",
   "main": "index.html",
   "scripts": {
-    "sass": "node-sass -w scss/ -o src/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Chynna Lew",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1"
   }
 }
